# boxedLANG

./: .gitignore  CNAME  IDE.py  LICENSE  all_cmds.bx  box_runner.py  box_to_json.py  false.bx  pyproject.toml  readme.md  test.bx  true.bx
-boxcode/: hello.bx  os.bx
IDE/: BoxSyntax.yaml  IDE.py
IDE/interpreter/: box_runner.py  box_to_json.py  box_to_py.py  main.py
boxcode/: all_cmds.bx  dumb_things_you_can_do.bx  os.bx  test.bx
boxrun/: box_rs.py  box_runner.py  box_to_json.py  box_vm.py  main.py
contributer info/: ROADMAP.md
ide/: IDE.py  index.html
runtime server/: pyproject.toml
runtime server/bx_rs/: __init__.py  box to py.py  box_rs.py
web-ver/: index.html
