[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "boxrun"
version = "0.1.0"
description = "boxedLANG interpreter"
readme = "readme.md"
requires-python = ">=3.8"

dependencies = [
    "colorama"
]

[project.scripts]
boxrun = "boxrun.main:main"

[tool.setuptools]
packages = ["boxrun"]