[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bx_rs"
version = "0.1.0"
description = "boxedLANG runtime server"
readme = "readme.md"
requires-python = ">=3.8"

dependencies = [
    "colorama"
]

[project.scripts]
boxrun = "boxrun.box_rs"

[tool.setuptools]
packages = ["boxrun"]