[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bx_rs"
version = "0.1.0"
description = "Internal logic for boxedLANG"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    # "requests", 
]

[tool.setuptools]
packages = ["bx_rs"]

[tool.setuptools.package-data]
"*" = ["*.py"]